src/test/ui/issues/issue-37576.stderr
error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:13:11
   |
LL |     while break {}
   |           ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:17:22
   |
LL |     while let true = break {}
   |                      ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:21:18
   |
LL |     loop { while break {} }
   |                  ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:29:15
   |
LL |         while break {}
   |               ^^^^^ unlabeled `break` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:35:11
   |
LL |     while continue {}
   |           ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:39:22
   |
LL |     while let true = continue {}
   |                      ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:43:18
   |
LL |     loop { while continue {} }
   |                  ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error[E0590]: `break` or `continue` with no label in the condition of a `while` loop
  --> $DIR/issue-37576.rs:51:15
   |
LL |         while continue {}
   |               ^^^^^^^^ unlabeled `continue` in the condition of a `while` loop

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0590`.
